--- a/package.json
+++ b/package.json
@@ -29,10 +29,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.7",
-    "@angular-devkit/build-ng-packagr": "^17.3.7",
-    "@angular/cli": "^17.3.7",
-    "@angular/compiler-cli": "^17.3.7",
-    "@angular/language-service": "^17.3.7",
+    "@angular/cli": "~17.3.7",
+    "@angular/compiler-cli": "^17.3.8",
     "@compodoc/compodoc": "^1.1.24",
     "@ngrx/effects": "^17.2.0",
     "@ngrx/entity": "^17.2.0",
@@ -44,11 +42,11 @@
     "codelyzer": "^6.0.2",
     "jasmine-core": "^5.1.2",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.4.3",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.1.0",
+    "karma": "~6.4.3",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^17.3.0",
     "protractor": "^7.0.0",
     "ts-node": "^10.9.2",
